package at.fhj.msd.swdesign.intro;

public interface Notification {

    void sendNotification(String msg);
}
